2017-06-29  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Replace dot (".") with underscore ("_") in package
        names when generating native routine registrations.

2017-06-17  Krill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/Dimension.h: Explicit cast to int

        * inst/include/Rcpp/exceptions.h: Don't declare unused arguments
        * src/attributes.cpp: Ditto

2017-06-14  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Add Shield around parameters in Rcpp::interfaces

2017-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use alternates for img.shields.io GPL-2+ badges

2017-06-06  Yu Gong  <armgong@yahoo.com>

        * src/api.cpp: Also permit compilation under Haiku-OS

2017-06-04  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * man/Rcpp.plugin.maker.Rd: Update manual page to additional Imports
        argument

2017-06-02  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Automatically register init functions for
        RcppModules
        * R/Rcpp.package.skeleton.R: compileAttributes only after all code is
        generated

2017-06-01  JJ Allaire  <jj@rstudio.com>

        * src/attributes.cpp: Fix registration for exports with name attribute.

2017-05-30  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/utils/tinyformat.h: Added missing newline

2017-05-23  JJ Allaire  <jj@rstudio.com>

        * R/Attributes.R: Execute tools::package_native_routine_registration_skeleton
        within package rather than current working directory.
        * src/attributes.cpp: Execute tools::package_native_routine_registration_skeleton
         within package rather than current working directory.

2017-05-22  Dirk Eddelbuettel  <edd@debian.org>

        * R/inline.R (Rcpp.plugin.maker): Whitespace changes

2017-05-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.11