@@ -578,6 +578,7 @@ namespace attributes {
         const std::string& targetFile() const { return targetFile_; }
         const std::string& package() const { return package_; }
         const std::string& packageCpp() const { return packageCpp_; }
+        const std::string packageCppPrefix() const { return "_" + packageCpp(); }
 
         // Abstract interface for code generation
         virtual void writeBegin() = 0;
@@ -611,10 +612,10 @@ namespace attributes {
             return "RcppExport_validate";
         }
         std::string exportValidationFunctionRegisteredName() {
-            return packageCpp() + "_" + exportValidationFunction();
+            return packageCppPrefix() + "_" + exportValidationFunction();
         }
         std::string registerCCallableExportedName() {			// #nocov
-            return packageCpp() + "_RcppExport_registerCCallable";	// #nocov
+            return packageCppPrefix() + "_RcppExport_registerCCallable";	// #nocov
         }
 
         // Commit the stream -- is a no-op if the existing code is identical
@@ -1822,7 +1823,7 @@ namespace attributes {
         // write header/preamble
         std::ostringstream headerStream;
         headerStream << commentPrefix_ << " Generated by using "
-                     << "Rcpp::compileAttributes()" 
+                     << "Rcpp::compileAttributes()"
                      << " -> do not edit by hand" << std::endl;
         headerStream << commentPrefix_ << " Generator token: "
                      << generatorToken() << std::endl << std::endl;
@@ -1872,7 +1873,7 @@ namespace attributes {
                     attributes,
                     true,
                     attributes.hasInterface(kInterfaceCpp),
-                    packageCpp());
+                    packageCppPrefix());
 
         // track cppExports, signatures, and native routines (we use these
         // at the end to generate the ValidateSignature and RegisterCCallable
@@ -1973,7 +1974,7 @@ namespace attributes {
             std::vector<std::size_t> routineArgs;
             for (std::size_t i=0;i<nativeRoutines_.size(); i++) {
                 const Attribute& attr = nativeRoutines_[i];
-                routineNames.push_back(packageCpp() + "_" + attr.function().name());
+                routineNames.push_back(packageCppPrefix() + "_" + attr.function().name());
                 routineArgs.push_back(attr.function().arguments().size());
             }
             std::string kRcppModuleBoot = "_rcpp_module_boot_";
@@ -2035,8 +2036,8 @@ namespace attributes {
         std::ostringstream ostr;
         std::string indentStr(indent, ' ');
         ostr <<  indentStr << "R_RegisterCCallable(\"" << package() << "\", "
-              << "\"" << packageCpp() << "_" << exportedName << "\", "
-              << "(DL_FUNC)" << packageCpp() << "_" << name << ");";
+              << "\"" << packageCppPrefix() << "_" << exportedName << "\", "
+              << "(DL_FUNC)" << packageCppPrefix() << "_" << name << ");";
         return ostr.str();					// #nocov end
     }
 
@@ -2166,7 +2167,7 @@ namespace attributes {
                        << std::endl;
                 ostr() << "            " << ptrName << " = "
                        << "(" << fnType << ")"
-                       << getCCallable(packageCpp() + "_" + function.name()) << ";"
+                       << getCCallable(packageCppPrefix() + "_" + function.name()) << ";"
                        << std::endl;
                 ostr() << "        }" << std::endl;
                 ostr() << "        RObject rcpp_result_gen;" << std::endl;
@@ -2377,9 +2378,13 @@ namespace attributes {
                 ostr() << ".Call(";
                 if (!registration_)
                     ostr() << "'";
-                ostr() << packageCpp() << "_" << function.name();
+                else
+                    ostr() << "`";
+                ostr() << packageCppPrefix() << "_" << function.name();
                 if (!registration_)
                     ostr() << "', " << "PACKAGE = '" << package() << "'";
+                else
+                    ostr() << "`";
 
                 // add arguments
                 const std::vector<Argument>& arguments = function.arguments();
@@ -2973,8 +2978,8 @@ namespace {
     public:
         SourceCppDynlib() {}
 
-        SourceCppDynlib(const std::string& cacheDir, 
-                        const std::string& cppSourcePath, 
+        SourceCppDynlib(const std::string& cacheDir,
+                        const std::string& cppSourcePath,
                         Rcpp::List platform)
             :  cppSourcePath_(cppSourcePath)
 
@@ -3336,7 +3341,7 @@ namespace {
         Rcpp::Function dynlibLookupFunc = rcppEnv[".sourceCppDynlibLookup"];
         Rcpp::List dynlibList = dynlibLookupFunc(cacheDir, file, code);
         if (dynlibList.length() > 0)
-            return SourceCppDynlib(dynlibList); 
+            return SourceCppDynlib(dynlibList);
         else
             return SourceCppDynlib();
     }
